--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body id="home">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <header>
         <h1>IMPRESSIVE WALL PUTTY</h1>
