--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
+<!--         <a href="#home">Home</a> -->
         <a href="#products">Products</a>
         <a href="#contact" onclick="toggleContact()">Contact</a>
         <a href="#about" onclick="toggleAbout()">About Us</a>
